k8s/front/service-front.yaml
apiVersion: v1
kind: Service
metadata:
    name: nuxt-front
    namespace: portfoliov3-front
spec:
    selector:
        app: nuxt-front
    ports:
        - port: 3000
          targetPort: 3000
